# arch_prepare

./: Cargo.toml  README.md  flake.nix
.github/workflows/: archiso.yml  rust.yml
src/: main.rs
src/tui/: mod.rs
