[package]
name = "arch_prepare"
version = "0.0.1"
edition = "2021"

[dependencies]
# Essentials
color-eyre = { version = "0.6.3", features = ["issue-url"] }
eyre = "0.6.12"
serde = { version = "1.0.203", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log", "attributes", "async-await"] }
# Runtime
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
# TUI/CLI
clap = { version = "4.5.4", features = ["derive", "string", "unicode", "env"] }
clap_complete_nushell = "4.5.1"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.26.3", features = ["macros", "serde"] }
# DSL
nom = "7.1.3"
nom_locate = "4.2.0"

